; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/nfs/extr_callback_xdr.c_preprocess_nfs4_op.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/nfs/extr_callback_xdr.c_preprocess_nfs4_op.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.callback_op = type { i32 }

@callback_ops = common dso_local global %struct.callback_op* null, align 8
@NFS4ERR_OP_ILLEGAL = common dso_local global i32 0, align 4
@NFS_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.callback_op**)* @preprocess_nfs4_op to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @preprocess_nfs4_op(i32 %0, %struct.callback_op** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.callback_op**, align 8
  store i32 %0, i32* %4, align 4
  store %struct.callback_op** %1, %struct.callback_op*** %5, align 8
  %6 = load i32, i32* %4, align 4
  switch i32 %6, label %13 [
    i32 129, label %7
    i32 128, label %7
  ]

7:                                                ; preds = %2, %2
  %8 = load %struct.callback_op*, %struct.callback_op** @callback_ops, align 8
  %9 = load i32, i32* %4, align 4
  %10 = zext i32 %9 to i64
  %11 = getelementptr inbounds %struct.callback_op, %struct.callback_op* %8, i64 %10
  %12 = load %struct.callback_op**, %struct.callback_op*** %5, align 8
  store %struct.callback_op* %11, %struct.callback_op** %12, align 8
  br label %16

13:                                               ; preds = %2
  %14 = load i32, i32* @NFS4ERR_OP_ILLEGAL, align 4
  %15 = call i32 @htonl(i32 %14)
  store i32 %15, i32* %3, align 4
  br label %19

16:                                               ; preds = %7
  %17 = load i32, i32* @NFS_OK, align 4
  %18 = call i32 @htonl(i32 %17)
  store i32 %18, i32* %3, align 4
  br label %19

19:                                               ; preds = %16, %13
  %20 = load i32, i32* %3, align 4
  ret i32 %20
}

declare dso_local i32 @htonl(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
